Sequencer do not sync cycles strips #39965

Closed
opened 2014-04-30 09:08:39 +02:00 by Denis · 6 comments

System Information
Win 7 64bit / Nvidia Quadro 4000

Blender Version
Broken: Blender270a + daily Build

Short description of error
Sequencer do not sync cycles strips if objects are on different layer and scene

test file
http://www.pasteall.org/blend/28801

Exact steps for others to reproduce the error

  • open test file / here are 3 scenes
  • scene1 + scene2 render correct
  • but sequencer render only last state (scene1 or scene2)

difference between scene 1+2 is only that one object on scene 2 was moved to another layer

**System Information** Win 7 64bit / Nvidia Quadro 4000 **Blender Version** Broken: Blender270a + daily Build **Short description of error** Sequencer do not sync cycles strips if objects are on different layer and scene ***test file*** http://www.pasteall.org/blend/28801 **Exact steps for others to reproduce the error** - open test file / here are 3 scenes - scene1 + scene2 render correct - but sequencer render only last state (scene1 or scene2) difference between scene 1+2 is only that one object on scene 2 was moved to another layer
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @ts1234

Added subscriber: @ts1234
Sergey Sharybin self-assigned this 2014-04-30 12:31:55 +02:00

This issue was referenced by blender/blender-addons-contrib@19cd6922a5

This issue was referenced by blender/blender-addons-contrib@19cd6922a5785584d741126141f336b9bae1e032

This issue was referenced by 19cd6922a5

This issue was referenced by 19cd6922a5785584d741126141f336b9bae1e032

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 19cd6922a5.

Closed by commit 19cd6922a5.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39965
No description provided.